# cs410s26

./: proj2_data.vtk  proj2_output
project2/: proj2.cpp
project3/: CMakeLists.txt  proj3.cxx
project4/: marching_cube_config.py  marching_cube_viz.py  output.txt
